--- a/index.ipynb
+++ b/index.ipynb
@@ -328,7 +328,7 @@
     }
    ],
    "source": [
-    "salina = {'City': 'Salina Island', 'Country': 'Italy', 'Population': 3, 'Area': 26} \n",
+    "salina = cities-\n",
     "salina\n",
     "# {'City': 'Salina Island', 'Country': 'Italy', 'Population': 3, 'Area': 26}"
    ]
