Automatically backed up by Learn

--- a/index.ipynb
+++ b/index.ipynb
@@ -370,7 +370,7 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 10,
+   "execution_count": 19,
    "metadata": {
     "scrolled": true
    },
@@ -381,13 +381,13 @@
        "12"
       ]
      },
-     "execution_count": 10,
+     "execution_count": 19,
      "metadata": {},
      "output_type": "execute_result"
     }
    ],
    "source": [
-    "city_count = \n",
+    "city_count = len(cities)\n",
     "city_count # 12"
    ]
   },
