--- a/index.ipynb
+++ b/index.ipynb
@@ -443,7 +443,7 @@
     }
    ],
    "source": [
-    "pyeongchang_values = list(cities)\n",
+    "pyeongchang_values = list(cities(PyeongChang))\n",
     "\n",
     "pyeongchang_values # ['PyeongChang', 'South Korea', 44, 1464]"
    ]
